--- a/2.3.x/spring-cloud-config-server-demo/pom.xml
+++ b/2.3.x/spring-cloud-config-server-demo/pom.xml
@@ -18,6 +18,10 @@
 		<spring-cloud.version>Hoxton.SR11</spring-cloud.version>
 	</properties>
 	<dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
