--- a/2.3.x/spring-cloud-config-server-demo/src/main/resources/bootstrap.yml
+++ b/2.3.x/spring-cloud-config-server-demo/src/main/resources/bootstrap.yml
@@ -17,7 +17,15 @@ spring:
           basedir: target/config
 
 eureka:
+  instance:
+    preferIpAddress: true
   client:
     registry-fetch-interval-seconds: 15 # default 30s
     serviceUrl:
       defaultZone: http://${e}/eureka/
+      
+management:
+  endpoints:
+    web:
+      base-path: /
+
