--- a/2.3.x/spring-cloud-eureka-server-demo/src/main/resources/bootstrap.yml
+++ b/2.3.x/spring-cloud-eureka-server-demo/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ p: 9001
 
 server:
   port: ${p}
-
+  
 spring:
   profiles:
     active: test
@@ -13,6 +13,7 @@ spring:
     
 eureka:
   instance:
+    preferIpAddress: true
     lease-renewal-interval-in-seconds: 15      # default 30s
     lease-expiration-duration-in-seconds: 45   # default 90s
   client:
